--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url("reset.css");
-@import url("header.css");
 @import url("button.css");
+@import url("header.css");
+@import url("main.css");
 body {
     /* Escolhi utilizar a fonte Poppins, já que a Gilroy é uma fonte paga. */
     font-family: 'Poppins', sans-serif;
