--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
+.bold{
+    font-weight: 500;
+    font-size: 17px
+}
 /* Seção de texto do download */
-
 .download {
     margin-top: 201px;
 }
@@ -10,6 +13,7 @@
     width: 557px;
     height: 198px;
     color: #000000;
+    white-space: nowrap;
 }
 
 .download p {
@@ -59,6 +63,7 @@
     color: #DADADA;
     font-size: 20px;
 }
+
 /* How Tere Works */
 .how-tere-works {
     margin-top: 128px;
@@ -68,14 +73,19 @@
     font-weight: 800;
 }
 
+.how-tere-works h3{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
 .green-text {
     color: #75BF7A;
 }
 
 
 .text-app {
-    color: #9E9DA2;
-    font-weight: 500px;
+    font-weight: 500;
     font-size: 23px;
     margin-top: 25px;
 }
@@ -102,17 +112,21 @@
 /* Coluna Esquerda */
 .how-esquerda {
     margin-top: 128px;
-    p {
-        margin-left: 100px;
-    }
+}
+
+.p-request-ride{
+    font-weight: 500;
+    font-size: 20px;
+    margin-left: 55px; 
+    white-space: nowrap;
 }
 
 .shopping {
-    margin-left: 115px;
+    margin-left: 146px;
 }
 
 .suits {
-    margin-left: 92px;
+    margin-left: 107px;
 }
 
 .h3-request-ride {
@@ -122,33 +136,156 @@
     white-space: nowrap;
 }
 
-.h3-instant-notifications{
+.h3-instant-notifications {
     margin-top: 4px;
 }
-.number-one,.number-three{
+
+.p-instant-notifications{
+    font-weight: 500;
+    font-size: 20px;
+    margin-left: 60px;
+}
+
+.number-one,.number-three {
     margin-left: 280px;
 }
 
-.number-two,.number-four{
+.number-two,.number-four {
     margin-right: 280px;
 }
 
+.number-four{
+    margin-top: 30px;
+}
 /* Coluna Direita */
 
-.how-direita{
+.how-direita {
     margin-top: 128px;
-    p{
-        margin-right: 100px;
-        font-weight: 500;
-    }
 }
 
-.h3-post{
+.h3-post {
     margin-top: 4px;
     margin-right: 180px;
 }
-.h3-cashless{
-    margin-top: 4px;
-    margin-right: 80px;
+
+.p-post{
+    margin-right: 50px;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.p-cashless{
+    margin-right: 50px;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.h3-cashless {
+    margin-right: 68px;
     white-space: nowrap;
+}
+
+
+
+/* Seção TERE BENEFITS */
+.tere-benefits h1 {
+    font-weight: 800;
+    font-size: 46px;
+    margin-top: 160px;
+    margin-bottom: 52px;
+}
+.bloco-1{
+    margin-top: 52px;
+}
+.bloco-2{
+    margin-top: 120px;
+}
+
+.bloco-3{
+    margin-top: 120px;
+}
+.topo-one {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-left: 36px;
+}
+.topo-one h2{
+    font-weight: 600;
+    margin-left: 39px;
+}
+
+.benefit-desc-one {
+    font-weight: 500;
+    font-size: 22px;
+    margin-top: 15px;
+    margin-left: 40px;
+}
+
+.img-tempo {
+    margin-left: 150px;
+}
+
+.topo-two {
+    margin-left: 190px;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+}
+
+.topo-two h2{
+    margin-left: 23px;
+}
+
+.benefit-desc-two{
+    font-weight: 500;
+    font-size: 22px;
+    margin-left: 196px;
+    margin-top: 15px;
+}
+.dinheiro{
+    margin-left: 250px;
+}
+.topo-three {
+    margin-left: 36px;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.benefit-desc-three{
+    font-weight: 500;
+    font-size: 22px;
+    margin-left: 40px;
+    white-space: nowrap;
+    margin-top: 15px;
+
+}
+.pessoa-notebook{
+    margin-left: 79px;
+}
+.benefit-block {
+    display: flex;
+    flex-direction: column;
+}
+
+.tere-verde {
+    color: #75BF7A;
+}
+
+.tere-benefits h2 {
+    font-size: 33px;
+    color: #000000;
+    font-weight: 600;
+    white-space: nowrap;
+}
+
+.benefit-title {
+    font-size: 24px;
+    color: #000000;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.tere-benefits p {
+    color: #9E9DA2;
 }
