--- a/css/button.css
+++ b/css/button.css
@@ -29,25 +29,55 @@
 }
 .download-btn {
     background-color: #000;
+    width: 260px;
+    height: 66px;
     color: #fff;
     border: 2px solid #fff;
-    padding: 12px 24px;
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     border-radius: 8px;
-    font-weight: 600;
-    font-size: 16px;
-    cursor: pointer;
+    font-weight: 800;
+    font-size: 24px;
 }
 
 .download-btn img {
     width: 30px;
     height: 30px;
 }
+.download-btn-footer {
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-weight: 800;
+    font-size: 16px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    min-width: 178px;
+    min-height: 46px;
+}
+
+
 
 .download-btn:hover {
     background-color: #333;
+}
+
+.download-btn-footer:hover{
+    background-color: #333;
+}
+
+.button-footer-store{
+    margin-right: 45px;
+}
+
+.download-btn-footer img{
+    width: 30px;
+    height: 27px;
 }
 
 
@@ -64,3 +94,6 @@
     margin: 50px 70px 49px 11px;
 }
 
+.apply-btn:hover{
+    background-color: #333;
+}
