--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,10 @@
 @import url("button.css");
 @import url("header.css");
 @import url("main.css");
+@import url("footer.css");
 body {
     /* Escolhi utilizar a fonte Poppins, já que a Gilroy é uma fonte paga. */
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif; 
+    overflow-x: hidden; 
 }
 
